--- a/public/recipe-page/styles.css
+++ b/public/recipe-page/styles.css
@@ -8,7 +8,8 @@
   --eggshell: hsl(30, 54%, 90%);
   --lightGrey: hsl(30, 18%, 87%);
   --wengeBrown: hsl(30, 10%, 34%);
-  --darkCharcoal: hsl(24, 5%, 18%); }
+  --darkCharcoal: hsl(24, 5%, 18%);
+  --desktopPadding: 30px; }
 
 @font-face {
   font-family: 'Young Serif';
@@ -34,7 +35,7 @@ main {
 .container {
   max-width: 600px;
   border-radius: 20px;
-  padding: 30px;
+  padding: var(--desktopPadding);
   background-color: var(--white); }
   .container .hero {
     background-image: url(/recipe-page/images/image-omelette.jpeg);
@@ -43,14 +44,23 @@ main {
     border-radius: 10px; }
   .container h1 {
     font-family: Young Serif; }
+  .container h2 {
+    color: var(--darkRasberry); }
+  .container h3 {
+    margin: 0 0 15px; }
   .container .focused {
     padding: 25px;
     background-color: var(--roseWhite); }
+  .container section:not(:last-child) {
+    padding-bottom: var(--desktopPadding);
+    border-bottom: 1px solid var(--lightGrey);
+    margin-bottom: var(--desktopPadding); }
 
 .attribution {
   position: fixed;
   bottom: 0;
   font-size: 11px;
-  text-align: center; }
+  text-align: center;
+  padding: 10px; }
   .attribution a {
     color: #3e52a3; }
