--- a/packages/recipe-page/solution/src/components/Title/Title.module.css
+++ b/packages/recipe-page/solution/src/components/Title/Title.module.css
@@ -1,9 +1,13 @@
+h1, h2 {
+    font-family: Young Serif;
+}
+
 h1 {
-    font-size: 22px;
-    margin-bottom: 16px;
+    font-size: 2.6rem;
+    margin-bottom: 1.5rem;
 }
 
 h2 {
-    font-size: 18px;
-    margin-bottom: 12px;
+    font-size: 1.8rem;
+    margin-bottom: 1.2rem;
 }
