--- a/packages/recipe-page/solution/src/components/Title/Title.module.css
+++ b/packages/recipe-page/solution/src/components/Title/Title.module.css
@@ -1,13 +1,17 @@
 h1, h2 {
-    font-family: Young Serif;
+    font-family: Young Serif, serif;
 }
 
 h1 {
-    font-size: 2.6rem;
+    color: var(--page-title-color);
+    font-size: var(--page-title-size);
+    font-weight: 500;
     margin-bottom: 1.5rem;
 }
 
 h2 {
-    font-size: 1.8rem;
-    margin-bottom: 1.2rem;
+    color: var(--section-title-color);
+    font-size: var(--section-title-size);
+    font-weight: 500;
+    margin-bottom: 0.9rem;
 }
