add spacers and separators between sections

--- a/packages/recipe-page/solution/src/components/Section/Section.module.css
+++ b/packages/recipe-page/solution/src/components/Section/Section.module.css
@@ -1,4 +1,4 @@
-.container {
+section {
     &.highlighted {
         background-color: var(--magenta-100);
         border-radius: var(--border-radius);
@@ -8,5 +8,14 @@
             font: 600 1.3rem OutfitVariable;
         }
     }
+}
+
+.container:not(:last-child) {
+    margin-bottom: var(--spacer);
+}
+
+.container + .container:not(:last-child) {
+    padding-bottom: var(--spacer);
+    border-bottom: 1px solid var(--red-100);
 }
 
