--- a/packages/recipe-page/solution/src/index.css
+++ b/packages/recipe-page/solution/src/index.css
@@ -11,7 +11,7 @@
     /* Colors */
 
     /* Reds */
-    --red-100: #f0f0f0;
+    --red-100: #ebebeb;
     --red-400: #7f4637;
 
     --yellow-100: #f3e5d8;
@@ -29,6 +29,7 @@
     --page-margin-bottom: 2rem;
     --page-padding: 2.5rem;
     --text-margin: 2rem;
+    --spacer: 2rem;
 
     --desktop-padding: 2.5rem;
     --mobile-padding: 2rem;
