--- a/packages/recipe-page/solution/src/components/Table/Table.module.css
+++ b/packages/recipe-page/solution/src/components/Table/Table.module.css
@@ -11,6 +11,22 @@ table {
     }
 
     td {
-        padding: 1rem;
+        padding: 0.75rem 1rem;
+        border-bottom: 1px solid var(--red-100);
+
+        &:nth-child(1) {
+            text-transform: capitalize;
+        }
+
+        &:nth-child(2) {
+            font-weight: 700;
+            color: var(--red-400);
+        }
+    }
+
+    tr:last-child {
+        td {
+            border-bottom: none;
+        }
     }
 }
