--- a/packages/recipe-page/solution/src/index.css
+++ b/packages/recipe-page/solution/src/index.css
@@ -35,7 +35,7 @@
     --mobile-padding: 2rem;
 
     /* Shapes */
-    --border-radius: 16px;
+    --border-radius: 1rem;
 
     /* Typography */
     --text-size: 1rem;
