--- a/packages/recipe-page/solution/src/components/Title/Title.module.css
+++ b/packages/recipe-page/solution/src/components/Title/Title.module.css
@@ -1,5 +1,6 @@
 h1, h2 {
     font-family: Young Serif, serif;
+    line-height: 1.1;
 }
 
 h1 {
@@ -14,4 +15,15 @@ h2 {
     font-size: var(--section-title-size);
     font-weight: 500;
     margin-bottom: 0.9rem;
+}
+
+/* mobile */
+@media screen and (max-width: 47rem) {
+    h1 {
+        font-size: 2.1rem;
+    }
+
+    h2 {
+        font-size: 1.7rem;
+    }
 }
