--- a/packages/product/src/components/Header/Header.module.css
+++ b/packages/product/src/components/Header/Header.module.css
@@ -1,3 +1,10 @@
-.header {
-    border-bottom: none;
+@media screen and (max-width > 600px) {
+    .header {
+        border-bottom: 1px solid var(--grayish-blue);
+    }
+}
+
+.logo {
+    height: 20px;
+    width: auto;
 }
