--- a/packages/product/src/components/Product/Product.module.css
+++ b/packages/product/src/components/Product/Product.module.css
@@ -1,9 +1,9 @@
 .product-container {
-    max-width: none;
+    max-width: var(--mobile-max-width);
 }
 
-@media screen and (max-width) {
-
+@media screen and (max-width > 600px) {
+    max-width: var(--desktop-max-width);
 }
 
 @media screen and (max-width > 375px) {
